2024/florent/docker/kubernetes/app.yml
---
###############
### MARIADB ###
###############
kind: Pod
metadata:
  name: mariadb
  labels:
    app: mariadb-app
spec:
  containers:
    - name: mariadb
      image: mariadb:10.6.18
apiVersion: v1
---
kind: Service
metadata:
  name: mariadb-service
spec:
  selector:
    app: mariadb-app
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
apiVersion: v1
---
########################
### PMA (PHPMyAdmin) ###
########################
# kind: ConfigMap
# metadata:
#   name: config
#   # HERE --> params main data for pma
# apiVersion: v1
---
# kind: Job
# metadata:
#   name: data
# spec:
#   template:
#     spec:
#       containers:
#         - name: data
#           image: mariadb:10.6.18
#           command: ["sh", "-c", "mysql -h mariadb-service -u root -proot < /data.sql"]
#           volumeMounts:
#             - name: data
#               mountPath: /data.sql
#               subPath: data.sql
#       restartPolicy: OnFailure
#       volumes:
#         - name: data
#           configMap:
#             name: config
# apiVersion: batch/v1
---
kind: Deployment
metadata:
  name: pma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pma-app
  template:
    metadata:
      labels:
        app: pma-app
    spec:
      containers:
        - name: pma
          image: phpmyadmin:5.2.1-apache
apiVersion: apps/v1
---
kind: Service
metadata:
  name: pma-service
spec:
  selector:
    app: pma-app
  ports:
    - port: 8081
      targetPort: 80
      nodePort: 30081
  type: NodePort
apiVersion: v1
---
######################
### WP (WordPress) ###
######################
kind: Deployment
metadata:
  name: wp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-app
  template:
    metadata:
      labels:
        app: wp-app
    spec:
      containers:
        - name: wp
          image: wordpress:6.6.1-php8.3-apache
apiVersion: apps/v1
---
kind: Service
metadata:
  name: wp-service
spec:
  selector:
    app: wp-app
  ports:
    - port: 2024
      targetPort: 80
      nodePort: 30024
  type: NodePort
apiVersion: v1
---
######################################
### Kubernetes Resources (Ingress) ###
######################################
kind: Ingress
metadata:
  name: ingress
  labels:
    app: ingress-app
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /pma
            backend:
              service:
                name: pma-service
                port:
                  number: 80
          - pathType: Prefix
            path: /wp
            backend:
              service:
                name: wp-service
                port:
                  number: 80
apiVersion: networking.k8s.io/v1
